<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewNoticia"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:background="#3A3737"
    app:cardBackgroundColor="#535255"
    app:cardCornerRadius="25dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tituloId"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/cu_ndo_llegar_8216_morbius_8217_a_netflix_y_disney_plus"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/imageViewId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewId"
            android:layout_width="376dp"
            android:layout_height="226dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/lay_todo"
            android:scaleType="centerCrop"
            android:src="@drawable/img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloId" />

        <TextView
            android:id="@+id/descripcionId"
            android:layout_width="367dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:text="@string/morbius_es_el_siguiente_gran_estreno_por_parte_de_sony_despu_s_de_la_exitosa_spider_man_no_way_home_tras_su_estreno_en_cines_morbius_protagonizado_por_jared_leto_llegar_a_las_plataformas_de_streaming_de_netflix_y_disney_plus_aqu_te_diremos_cu_ndo_podr_s_ir_a_ver_morbius_al_cine_y_cu_ndo_estar_disponible_en_8230"
            android:textColor="#F8F5F5"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fechaId" />

        <TextView
            android:id="@+id/fechaId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/lay_date"
            android:textColor="#FBFAFA"
            app:layout_constraintBottom_toTopOf="@+id/descripcionId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewId"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/categoriaId"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="#0337F4"
            android:backgroundTint="@color/ColorTitulo"
            android:gravity="center"
            android:text="@string/lay_catego"
            android:textColor="#FBFBFB"
            android:textColorHighlight="#FAF7F7"
            android:textColorHint="#FAF8F8"
            android:textColorLink="#FAF6F6"
            app:layout_constraintStart_toStartOf="@+id/imageViewId"
            app:layout_constraintTop_toTopOf="@+id/imageViewId" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>